--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Archivo+Black&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Archivo+Black&family=Cookie&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -98,6 +98,15 @@
            
     </div>
     </section>
+
+
+    <!-- ==================================Footer Section========================================== -->
+    <footer>
+        <div class="footer-section">
+            <h2>Mission <span class="ft-text"> 2022</span></h2>
+            <p>Hard work, Perseverance, and Determination for 2022</p>
+        </div>
+    </footer>
 
 
     
