--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Archivo+Black&family=Cookie&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./images/pictures/wp2809515-red-black-background-removebg-preview.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,7 +19,7 @@
 
 
     <!------------------------------------------- intro section ------------------------------------------>
-    <section>
+    <section class="intro-section">
         <div class="row">
             <div class="intro">
                 <div class="title">
