intro message updated

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                     <h1> <span class="mission"> Mission 2022</span></h1>
                    
                 </div>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli deterruisset. No duo populo
-                    animal noluisse, enim</p>
+                <p>In this year 2022 my one and only mission is how can i bcome a great web developer. and so i want to focush on how to leran programming.</p>
                     <a class="link-button" href="" >Explore Now</a>
                     <p>Scroll down to explore more about us</p>
 
