mission tag is updated

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
             <div id="card-1" class="card">
                 <img src="./images/illustrators/illustrator-1.png" alt="">
                 <h3>Mission</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, quibusdam.</p>
+                <p>Now my mission is how can i become a web developer and within next one year i will complete my mission.</p>
             </div>
             <div id="card-2" class="card">
                 <img src="./images/illustrators/illustrator-2.png" alt="">
-                <h3>Mission</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, quibusdam.</p>
+                <h3>Vission</h3>
+                <p>My vission say that web development is a great proffetion, and  future world will depend on internet.</p>
             </div>
             <div id="card-3" class="card">
                 <img src="./images/illustrators/illustrator-3.png" alt="">
-                <h3>Mission</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, quibusdam.</p>
+                <h3>Goals</h3>
+                <p>When i was in class 6 since that time i had a dreem , and my dreem is i want to be web developer. Now my dreem is my one and only goals.</p>
             </div>
         
         </div>
