all paragraph is updated

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="dev-text">
                 <h1>Develop</h1>
                 <h1>Without Limits</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, aliquam mollitia porro quasi fuga sit voluptas voluptate, excepturi distinctio </p>
+                <p>Development Without Limits is an organization that works to develop curriculum with after school and summer programs in order to promote the high-quality and effective learning through tailoring programs to be engaging and and dynamic for students. </p>
                 <a class="link-button" href="">Read the Documentation</a>
             </div>
            
@@ -88,7 +88,7 @@
             <div class="com-text">
                 <h1>Know our </h1>
                 <h1>Global Communitys</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, aliquam mollitia porro quasi fuga sit voluptas voluptate, excepturi distinctio </p>
+                <p>We have a world wide comunity for learn programming .  Our comunity name is programming-hero and we have a great teacher "Jhanker Mahbub Vhai " </p>
                 <a class="link-button" href="">Read the Documentation</a>
             </div>
             <div class="com-image">
