--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h1> <span class="mission"> Mission 2022</span></h1>
                    
                 </div>
-                <p>In this year 2022 my one and only mission is how can i bcome a great web developer. and so i want to focush on how to leran programming.</p>
+                <p> <span style="font-weight: 700; text-transform: uppercase;"> Im HM RAHIM,</span> <br> In this year 2022 my one and only mission is how can i bcome a great web developer. and so i want to focush on how to leran programming.</p>
                     <a class="link-button" href="" >Explore Now</a>
                     <p>Scroll down to explore more about us</p>
 
