linkdin profile link updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                    
                 </div>
                 <p> <span style="font-weight: 700; text-transform: uppercase;"> Im HM RAHIM,</span> <br> In this year 2022 my one and only mission is how can i bcome a great web developer. and so i want to focush on how to leran programming.</p>
-                    <a class="link-button" href="" >Explore Now</a>
+                    <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hm-rahim-4a39361b3/" >Explore Now</a>
                     <p>Scroll down to explore more about us</p>
 
             </div>
